fixed navbar alignment issue.

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,12 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
   background-color: #1a087d;
   min-height: 100vh;
