--- a/src/css/NavHeader.css
+++ b/src/css/NavHeader.css
@@ -2,4 +2,5 @@
     height: 30px;
     width: 30px;
     margin-right: 5px;
+    margin-left: 20px;
 }
